--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta itemprop="dummyContentLength" content="short">
   <meta itemprop="defaultBackground" content="/images/background.jpg" data-width="1800" data-height="1800" data-position="c" data-style="fill" data-color="#665b42">
   <!-- This script loads the Populr theming engine. Populr will automatically remove it at runtime. -->
-  <script src="http://lvh.me:3000/assets/developers/themer.js"></script>
+  <script src="http://populr.me/assets/developers/themer.js"></script>
 
   <!-- Add any javscript your theme requires here -->
   <script src="/js/main.js"></script>
@@ -25,7 +25,6 @@
 <body>
   <!-- Put your theme's HTML inside this script tag. The script tag will 
        prevent issues with quote escaping and invalid markup. -->
-       <!--I-1|I-1|I-1|D-3|D-1,T-1|D-1,T-1,T-1|E-1,T-1|I-1,I-1,I-1|T-1|T-1,I-1|I-1,I-1-->
   <script id="theme" type="text/x-handlebars-template">
 
     {{{title}}}
