fix several issues

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       {{#asset "imagegroup" size="1"}}
         {{#if_equal layout.sortOrder 0}}
-          {{{imageslider images width="740" height="555"}}}
+          {{{imageslider images width="740" height="475" crop-single=true}}}
           <div class="text">
             {{{title}}}
             {{{description}}}
