--- a/index.html
+++ b/index.html
@@ -29,18 +29,6 @@
 
     {{{title}}}
 
-    <div id="meta">
-      {{#sharing}}
-        <div id="pop-sharing" class="addthis_toolbox addthis_counter_style">
-          <a class="addthis_button_facebook_like" fb:like:layout="box_count"></a>
-          <a class="addthis_button_tweet" tw:count="vertical"></a>
-          <a class="addthis_button_google_plusone" g:plusone:size="tall"></a>
-          <a class="addthis_counter"></a>
-        </div>
-      {{/sharing}}
-      {{{pop_links}}}
-    </div>
-
     {{#region "columnizer" id="main-region" max_cols="3" max_auto_assets="0" dummy_content="I-1,I-1,I-1|V-1|T-1,T-1"}}
 
       {{#asset "text" size="1"}}
@@ -129,37 +117,49 @@
         </ul>
       {{/asset}}
  
-      {{#asset "embedgroup" size="1" width="700"}}
-        {{{title}}}
-        <div class="content">
-          {{#embeds}}
-            <div class="embed">{{{html}}}</div>
-          {{/embeds}}
+      {{#asset "embedgroup" size="1" width="740"}}
+        {{#embeds}}
+          <div class="embed">{{{html}}}</div>
+        {{/embeds}}
+        <div class="text">
+          {{{title}}}
+          {{{description}}}
         </div>
-        {{{description}}}
       {{/asset}}
 
       {{#asset "embedgroup" size="2" width="340"}}
-        {{{title}}}
-        <div class="content">
-          {{#embeds}}
-            <div class="embed">{{{html}}}</div>
-          {{/embeds}}
+        {{#embeds}}
+          <div class="embed">{{{html}}}</div>
+        {{/embeds}}
+        <div class="text">
+          {{{title}}}
+          {{{description}}}
         </div>
-        {{{description}}}
       {{/asset}}
 
       {{#asset "embedgroup" size="3" width="220"}}
-        {{{title}}}
-        <div class="content">
-          {{#embeds}}
-            <div class="embed">{{{html}}}</div>
-          {{/embeds}}
+        {{#embeds}}
+          <div class="embed">{{{html}}}</div>
+        {{/embeds}}
+        <div class="text">
+          {{{title}}}
+          {{{description}}}
         </div>
-        {{{description}}}
       {{/asset}}
 
     {{/region}}
+
+    <div id="meta">
+      {{#sharing}}
+        <div id="pop-sharing" class="addthis_toolbox addthis_counter_style">
+          <a class="addthis_button_facebook_like" fb:like:layout="box_count"></a>
+          <a class="addthis_button_tweet" tw:count="vertical"></a>
+          <a class="addthis_button_google_plusone" g:plusone:size="tall"></a>
+          <a class="addthis_counter"></a>
+        </div>
+      {{/sharing}}
+      {{{pop_links}}}
+    </div>
 
   </script>
 </body>
