--- a/index.html
+++ b/index.html
@@ -49,10 +49,7 @@
       {{#asset "imagegroup" size="1"}}
         {{#if_equal layout.sortOrder 0}}
           {{{imageslider images width="740" height="475" crop-single=true}}}
-          <div class="text">
-            {{{title}}}
-            {{{description}}}
-          </div>
+          <div class="text">{{{title}}}{{{description}}}</div>
         {{else}}
           <div class="wrap">
             {{{imageslider images width="220" height="168"}}}
