Bug fixes for IE and mobile

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <span class="file">{{extension}}</span><span class="filename">{{title}}</span>
             </div>
             <div class="download">
-              <a href="{{original_url}}" class="btn btn-large"><i class="icon icon-download"></i>&nbsp;&nbsp;&nbsp;download</a>
+              <a href="{{original_url}}" class="btn btn-large"><i class="icon icon-download"></i><span class="download-spacing">&nbsp;&nbsp;&nbsp;</span>download</a>
             </div>
           </li>
           {{/documents}}
