--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta itemprop="palette" content="palette-custom" title="Custom" data-preview="custom">
 
   <!-- Add any styles your theme requires here -->
-  <link rel="stylesheet/less" type="text/css" href="/styles/main.less">
+  <link rel="stylesheet/less" type="text/css" href="styles/main.less">
   <meta itemprop="dummyImageCategory" content="Landscapes">
   <meta itemprop="dummyContentLength" content="short">
   <meta itemprop="defaultBackground" content="/images/background.jpg" data-width="1800" data-height="1800" data-position="c" data-style="fill" data-color="#665b42">
@@ -51,14 +51,32 @@
       {{#asset "imagegroup" size="1"}}
         {{#if_equal layout.sortOrder 0}}
           <div class="header-image">
+            
+            <div class="my-lightbox-parent" style="width:740px; height:484px;">
+            {{#if lightbox_enabled}}
+                <div class="my-cover">
+                    <div class="bg"></div>
+                    <div class="view">view</div>
+                </div>
+            {{/if}}
             {{{imageslider images width="740" height="484" crop-single=true}}}
+            </div>
+            
             {{#if_or title description}}
               <div class="text">{{{title}}}{{{description}}}</div>
             {{/if_or}}
           </div>
         {{else}}
           <div class="wrap">
+            <div class="my-lightbox-parent" style="width:220px; height:176px;">
+            {{#if lightbox_enabled}}
+                <div class="my-cover">
+                    <div class="bg"></div>
+                    <div class="view">view</div>
+                </div>
+            {{/if}}
             {{{imageslider images width="220" height="176"}}}
+            </div>
             <div class="text">
               {{{title}}}
               {{{description}}}
@@ -69,14 +87,30 @@
  
       {{#asset "imagegroup" size="2"}}
         {{{title}}}
-        {{{imageslider images width="340" height="264" crop-single="true"}}}
+        <div class="my-lightbox-parent">
+            {{#if lightbox_enabled}}
+                <div class="my-cover">
+                    <div class="bg"></div>
+                    <div class="view">view</div>
+                </div>
+            {{/if}}
+            {{{imageslider images width="340" height="264" crop-single="true"}}}
+       </div>
         <div class="text">
           {{{description}}}
         </div>
       {{/asset}}
   
       {{#asset "imagegroup" size="3"}}
-        {{{imageslider images width="220" height="176" crop-single="true"}}}
+        <div class="my-lightbox-parent">
+            {{#if lightbox_enabled}}
+                <div class="my-cover">
+                    <div class="bg"></div>
+                    <div class="view">view</div>
+                </div>
+            {{/if}}
+            {{{imageslider images width="220" height="176" crop-single="true"}}}
+       </div>
         <div class="text">
           {{{title}}}
           {{{description}}}
