--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     {{{title}}}
 
-    {{#region "columnizer" id="main-region" max_cols="3" max_auto_assets="0" dummy_content="I-1,I-1,I-1|V-1|T-1,T-1"}}
+    {{#region "columnizer" id="main-region" max_cols="3" max_auto_assets="0" dummy_content="T-1|T-1,T-1|T-1,T-1,T-1|I-1|I-2|I-1,I-2|I-1,I-2,I-3|D-1|D-3|D-1,D-3|D-1,D-2,D-3|E-1|E-2|E-1,E-2|E-1,E-2,E-3"}}
 
       {{#asset "text" size="1"}}
         {{{title}}}
